[package]
name = "axaddrspace"
version = "0.1.0"
edition = "2021"
description = "ArceOS-Hypervisor guest address space management module"

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazyinit = "0.2"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"

# Operating system independent modules provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.2.0"
memory_set = "0.1.0"
page_table_multiarch = "0.3"
page_table_entry = "0.3"
